feat: removi o hardcode do cors